<resources>
    <string name="app_name">CityJob</string>
    <string name="activity_title_work_experience">Your Recent Work Experience</string>
    <string name="activity_title_your_education">Your Education</string>
    <string name="activity_title_job_preferences">Job Preferences</string>
<!--    <string name="git_token">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</string>-->

    <string name="choose_your_role">Choose Your Role</string>
    <string name="i_am_job_seeker">I am a Job Seeker</string>
    <string name="i_am_recruiter">I am a Recruiter</string>
    <string name="continue_with_mobile">Continue with Mobile Number</string>
    <string name="or_continue_with_email">Or, Continue with Email ID</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="login_with_google">Login with Google</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="button_next">Next</string>
    <string name="button_add">Add</string>
    <string name="button_send_code">Send Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp2">Resend OTP?</string>
    <string name="enter_otp_sent_to">Enter OTP send on</string>
    <string name="change_mobile_number">Change Mobile Number?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="personal_info">Personal Information</string>
    <string name="complete_profile_message">Complete your profile, it will help you to reach out to more recruiters</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hin_gender">Gender</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_country">Country</string>
    <string name="hint_state">State</string>
    <string name="hint_city">City</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_start">Start</string>
    <string name="hint_end">End</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_role_n_responsibility">Role &amp; Responsibilities</string>
    <string name="work_experience">Work Experiences</string>
    <string name="i_am_fresher">I am a fresher</string>
    <string name="present">Present</string>
    <string name="by_choosing_fresher">By choosing “ I am a fresher “ you won’t be able to add any work experience.</string>
    <string name="education">Education</string>
    <string name="certifications">Certifications</string>
    <string name="hint_institute_name">Institute Name</string>
    <string name="hint_university_name">University Name</string>
    <string name="hint_education_level">Education Level</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_date_of_completion">Date of Completion</string>
    <string name="hint_attach_certificate">Attach Certificate</string>
    <string name="hint_job_type">Job Type</string>
    <string name="hint_expected_industry">Expected Industry</string>
    <string name="hint_functional_area">Functional Area</string>
    <string name="hint_preferred_city">Preferred City</string>
    <string name="hint_expected_salary">Expected Salary</string>
</resources>