<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorBackground"
        tools:context=".ui.activity.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/user_image_size"
                        android:layout_height="@dimen/user_image_size"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user_placeholder" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallTitleTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_info" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SmallTitleTextStyleGray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/complete_profile_message" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/hint_first_name"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_last_name"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hin_gender"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_date_of_birth"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_email"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_mobile_number"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:inputType="phone"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_country"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_state"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_city"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext"
                    style="@style/ButtonFillStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingVertical="0dp"
                    android:text="@string/button_next" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </RelativeLayout>
</layout>