<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.activity.MainActivity">

        <include
            android:id="@+id/tbView"
            layout="@layout/toolbar_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tbView"
            android:layout_marginTop="0dp"
            android:fadingEdge="none"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingHorizontal="@dimen/activity_padding">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_job_type"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_expected_industry"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_functional_area"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_preferred_city"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:hint="@string/hint_expected_salary"
                    android:theme="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext"
                    style="@style/ButtonFillStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingVertical="0dp"
                    android:text="@string/button_next" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>